--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
               </p>
             
               <p class="about-text">
-                Com mais de <strong>7 anos de experiência</strong> em desenvolvimento de sistemas web, 
-                atuo como <strong>Engenheiro de Software Sênior</strong> desenvolvendo soluções ERP 
-                integradas para e-commerce nos principais marketplaces globais.
+                Com mais de <strong>7 anos de experiência</strong> no desenvolvimento de sistemas web, atuo como <strong>Engenheiro de Software Sênior</strong>, criando soluções ERP integradas para e-commerces, otimizando sua performance nos principais marketplaces globais.
               </p>
             </div>
 
