--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <img src="https://cdn.worldvectorlogo.com/logos/nubank-3.svg" alt="Nubank" class="experience__logo">
               </div>
               <div class="experience__card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Ita%C3%BA_Unibanco_logo_2023.svg/2048px-Ita%C3%BA_Unibanco_logo_2023.svg.png" alt="Itaú" class="experience__logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Ajinomoto_global_logo.svg/2560px-Ajinomoto_global_logo.svg.png" alt="Ajinomoto" class="experience__logo">
               </div>
               <div class="experience__card">
                 <img src="https://yt3.googleusercontent.com/ytc/AIdro_lTx3lHfnEMKWV6gdlqDzlaDB_4pK69-XrjnJPQRoVwqlQ=s900-c-k-c0x00ffffff-no-rj" alt="Ambev" class="experience__logo">
