--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Portfólio de Erick Barbosa - Engenheiro de Software Sênior especializado em desenvolvimento de ERPs">
   <meta name="keywords" content="ERP, Engenharia de Software, Desenvolvimento Web, E-commerce">
   <title>Erick Barbosa | Engenheiro de Software & ERP Specialist</title>
+  <link rel="icon" href="https://static.thenounproject.com/png/56584-200.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
